# github-code-fetcher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  insomnia.yaml
.github/workflows/: cd-job.yaml  ci-job.yaml
infra/: create-do-droplet.sh  destroy-do-droplet.sh  userdata.sh.template
src/: main.rs
src/static/: ai-plugin.json  openapi.yaml
src/static/.well-known/: ai-plugin.json
